--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hover Effect For Icons</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/bcc0e962c7.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+
+<div class="container">
+
+    <div class="icons">
+        <a href="https://www.facebook.com/radka.krenova">
+            <i class="fa-brands fa-facebook-f"></i>
+        </a>
+
+        <a href="https://www.instagram.com/akdar_avonerk/?fbclid=IwAR2TA4PKWOICriRjcMLiTB9RYhYZRTGW5Fm-LnMVYdWxfX_Cntyt47D43ZQ">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+
+        <a href="https://github.com/rad1k-k">
+            <i class="fa-brands fa-github"></i>
+        </a>
+
+    </div>
+
+</div>
+
+  
 </body>
 </html>
